Put the images into a folder named 'images'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Tasty Bite</h1>
   </header>
   <section class="banner">
-    <img src="bannerimg.jpg" alt="Tasty Bite banner">
+    <img src="images/bannerimg.jpg" alt="Tasty Bite banner">
     
   </section>
 
@@ -26,19 +26,19 @@
     <section class="menu-section">
       <h2>Our Menu</h2>
       <div class="menu-item">
-        <img src="ChickenBiryani..jpg" alt="Chicken Biriyani img" class="menu-img">
+        <img src="images/ChickenBiryani..jpg" alt="Chicken Biriyani img" class="menu-img">
         <span class="dish-name">Chicken Biriyani</span>
         <button>Order now</button>
       </div>
 
       <div class="menu-item">
-        <img src="Salmon.jpg" alt="Salmon img" class="menu-img">
+        <img src="images/Salmon.jpg" alt="Salmon img" class="menu-img">
         <span class="dish-name">Grilled Salmon</span>
         <button>Order now</button>
       </div>
 
       <div class="menu-item">
-        <img src="prawnImage.jpg" alt="Prawn deep fry Img" class="menu-img">
+        <img src="images/prawnImage.jpg" alt="Prawn deep fry Img" class="menu-img">
         <span class="dish-name">Prawns Deep Fry</span>
         <button>Order now</button>
       </div>
